
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int IPPROTO_TCP ;
 int IP_H ;
 int TCP_H ;
 char* alloca (int) ;
 int build_ip (int,int ,int ,int ,int,int ,int ,int ,int ,int ,char*) ;
 int build_tcp (int ,int ,int,unsigned int,int,int,int ,char*,int,char*) ;
 int do_checksum (char*,int ,int) ;
 int packid ;
 int sock ;
 int spoofed ;
 int spoofed_port ;
 int strlen (char*) ;
 int target ;
 int target_port ;
 int write_ip (int ,char*,int) ;

void
  send_data (unsigned int ack, char *rant)
{
    char * buf=alloca(200+strlen(rant));
    build_tcp (spoofed_port, target_port, 2, ack, 16, 32000, 0, rant, strlen
  (rant), buf + IP_H);
    build_ip (TCP_H + strlen (rant), 0, packid++, 0, 64, IPPROTO_TCP, spoofed,
              target, 0, 0, buf);
    do_checksum (buf, IPPROTO_TCP, TCP_H + strlen (rant));
    write_ip (sock, buf, IP_H + TCP_H + strlen (rant));
}
