; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_19458.c_send_data.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_19458.c_send_data.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@spoofed_port = common dso_local global i32 0, align 4
@target_port = common dso_local global i32 0, align 4
@IP_H = common dso_local global i32 0, align 4
@TCP_H = common dso_local global i32 0, align 4
@packid = common dso_local global i32 0, align 4
@IPPROTO_TCP = common dso_local global i32 0, align 4
@spoofed = common dso_local global i32 0, align 4
@target = common dso_local global i32 0, align 4
@sock = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @send_data(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  store i32 %0, i32* %3, align 4
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = call i32 @strlen(i8* %6)
  %8 = add nsw i32 200, %7
  %9 = call i8* @alloca(i32 %8)
  store i8* %9, i8** %5, align 8
  %10 = load i32, i32* @spoofed_port, align 4
  %11 = load i32, i32* @target_port, align 4
  %12 = load i32, i32* %3, align 4
  %13 = load i8*, i8** %4, align 8
  %14 = load i8*, i8** %4, align 8
  %15 = call i32 @strlen(i8* %14)
  %16 = load i8*, i8** %5, align 8
  %17 = load i32, i32* @IP_H, align 4
  %18 = sext i32 %17 to i64
  %19 = getelementptr inbounds i8, i8* %16, i64 %18
  %20 = call i32 @build_tcp(i32 %10, i32 %11, i32 2, i32 %12, i32 16, i32 32000, i32 0, i8* %13, i32 %15, i8* %19)
  %21 = load i32, i32* @TCP_H, align 4
  %22 = load i8*, i8** %4, align 8
  %23 = call i32 @strlen(i8* %22)
  %24 = add nsw i32 %21, %23
  %25 = load i32, i32* @packid, align 4
  %26 = add nsw i32 %25, 1
  store i32 %26, i32* @packid, align 4
  %27 = load i32, i32* @IPPROTO_TCP, align 4
  %28 = load i32, i32* @spoofed, align 4
  %29 = load i32, i32* @target, align 4
  %30 = load i8*, i8** %5, align 8
  %31 = call i32 @build_ip(i32 %24, i32 0, i32 %25, i32 0, i32 64, i32 %27, i32 %28, i32 %29, i32 0, i32 0, i8* %30)
  %32 = load i8*, i8** %5, align 8
  %33 = load i32, i32* @IPPROTO_TCP, align 4
  %34 = load i32, i32* @TCP_H, align 4
  %35 = load i8*, i8** %4, align 8
  %36 = call i32 @strlen(i8* %35)
  %37 = add nsw i32 %34, %36
  %38 = call i32 @do_checksum(i8* %32, i32 %33, i32 %37)
  %39 = load i32, i32* @sock, align 4
  %40 = load i8*, i8** %5, align 8
  %41 = load i32, i32* @IP_H, align 4
  %42 = load i32, i32* @TCP_H, align 4
  %43 = add nsw i32 %41, %42
  %44 = load i8*, i8** %4, align 8
  %45 = call i32 @strlen(i8* %44)
  %46 = add nsw i32 %43, %45
  %47 = call i32 @write_ip(i32 %39, i8* %40, i32 %46)
  ret void
}

declare dso_local i8* @alloca(i32) #1

declare dso_local i32 @strlen(i8*) #1

declare dso_local i32 @build_tcp(i32, i32, i32, i32, i32, i32, i32, i8*, i32, i8*) #1

declare dso_local i32 @build_ip(i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i8*) #1

declare dso_local i32 @do_checksum(i8*, i32, i32) #1

declare dso_local i32 @write_ip(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
